# CPP-Basico

./: .gitignore  CMakeLists.txt  README.md
Basico1/: CMakeLists.txt
Basico1/Folha/: folha.cpp  folha.hpp
Basico1/biblioteca/: biblioteca.hpp
Basico1/src/: Mensagem.cpp  main.cpp
Basico1/src/headers/: Classe.hpp  header.hpp
Basico2/: CMakeLists.txt
Basico2/src/: main.cpp
POO/: CMakeLists.txt
POO/src/: POO.hpp
biblioteca/: biblioteca.cpp
src/: Classe.cpp  main.cpp
